# cyber-audit

./: .gitignore  README.md  pyproject.toml  state.db-shm  state.db-wal
config/: stages.yaml
cyber_audit/: __init__.py  agent.py  cli.py  config.py  json_utils.py  llm.py  orchestrator.py  state.py  tools.py
cyber_audit/stages/: __init__.py  _common.py  dedupe.py  feedback.py  gapfill.py  hunt.py  recon.py  report.py  trace.py  validate.py
docs/plans/: 2025-05-18-cyber-audit-implementation.md
prompts/: 01-recon.md  02-hunt.md  03-validate.md  04-gapfill.md  05-dedupe.md  06-trace.md  07-feedback.md  08-report.md
schemas/: dedupe_output.schema.json  feedback_output.schema.json  finding.schema.json  gapfill_output.schema.json  hunt_task.schema.json  recon_output.schema.json  report.schema.json  trace.schema.json  validation.schema.json
tests/: test_agent.py  test_config.py  test_e2e.py  test_json_utils.py  test_llm.py  test_orchestrator.py  test_package.py  test_stages.py  test_state.py  test_tools.py
tests/fixtures/vulnerable_app/: app.py
tests/test_stages/: test_common.py  test_dedupe.py  test_feedback.py  test_gapfill.py  test_hunt.py  test_recon.py  test_report.py  test_trace.py  test_validate.py
