[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-audit"
version = "0.1.0"
description = "8-stage vulnerability discovery agent — DeepSeek + OpenAI powered, Cloudflare Project Glasswing architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-mock>=3.14",
]

[project.scripts]
cyber-audit = "cyber_audit.cli:main"

[tool.setuptools.packages.find]
include = ["cyber_audit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
